--- a/umpleonline/scripts/tipStyle.css
+++ b/umpleonline/scripts/tipStyle.css
@@ -3,7 +3,6 @@
     display: inline;
     overflow: auto;
     position: relative;
-    display: inline;
     color: green;
 }
 
@@ -13,7 +12,7 @@
     background-color: #dadada;
     border: 2px solid #aaaaaa; position: absolute;
     z-index: 50; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
-    block-size: fit-content; max-width: 600px;
+    max-width: 600px;
     padding: 10px; box-shadow: 0px 0px 5px grey;
     margin-left:auto; margin-right:auto; margin-top: 10px; margin-bottom:0px;
     cursor: initial;
